@@ -1,3 +1,5 @@
+HEAD
+	+ Add description field for redirects
 1.3.6
 	+ Add clone() to EBox::Firewall::IptablesRule
 1.3.4
